objects/AgileVizArt__Sprint__c.object
<CustomObject>
    <description>A sprint is a development iteration which defines a specific scope of user stories. All assigned user stories to one sprint define so-called sprint backlog.</description>
    <fields>
        <fullName>AgileVizArt__Claimed_Points__c</fullName>
        <inlineHelpText>Total effort points of all done (or closed) requirements or defects</inlineHelpText>
        <label>Claimed Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Define parent sprint or phase</inlineHelpText>
        <label>Parent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AgileVizArt__Release__c</field>
                <operation>equals</operation>
                <valueField>AgileVizArt__Sprint__c.AgileVizArt__Release__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__Sprint__c</referenceTo>
        <relationshipLabel>Sub Sprints</relationshipLabel>
        <relationshipName>Sub_Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project_Id__c</fullName>
        <description>Used mainly in background to pass into master detail relationship lookups</description>
        <formula>AgileVizArt__Release__r.AgileVizArt__Project__c</formula>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project_Name__c</fullName>
        <description>Used mainly in background to pass into master detail relationship lookups</description>
        <formula>AgileVizArt__Release__r.AgileVizArt__Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Release_Name__c</fullName>
        <description>Used mainly in background to pass into master detail relationship lookups</description>
        <formula>AgileVizArt__Release__r.Name</formula>
        <label>Release Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Release__c</fullName>
        <label>Release</label>
        <referenceTo>AgileVizArt__Release__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Scope_Cut_Off_Date__c</fullName>
        <formula>AgileVizArt__Start_Date__c + (AgileVizArt__End_Date__c - AgileVizArt__Start_Date__c + 1) * 0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cut off date after which additionally created defects are excluded from sprint scope in velocity calculations. Cut off date defined as 30% of calendar period. At beginning scope might be adjusted, later identified defects belong to user stories of sprint</inlineHelpText>
        <label>Scope Cut Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Status__c</fullName>
        <inlineHelpText>Defines status of your sprint. Until sprint planning meeting completed this should be planned. Set on completed when your sprint is done.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Total_Points__c</fullName>
        <inlineHelpText>Total effort points of all requirement and defect user stories</inlineHelpText>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Working_Days__c</fullName>
        <inlineHelpText>Number of working days of this sprint. This will be calculated if not populated based on week days between sprint start and end date. Only correct if there are many holidays in between.</inlineHelpText>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>AgileVizArt__All</fullName>
        <columns>NAME</columns>
        <columns>AgileVizArt__Release__c</columns>
        <columns>AgileVizArt__Start_Date__c</columns>
        <columns>AgileVizArt__End_Date__c</columns>
        <columns>AgileVizArt__Total_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AgileVizArt__EndDate_gt_StartDate</fullName>
        <active>true</active>
        <description>End date must be greater than start date</description>
        <errorConditionFormula>AgileVizArt__End_Date__c &lt;= AgileVizArt__Start_Date__c</errorConditionFormula>
        <errorDisplayField>AgileVizArt__End_Date__c</errorDisplayField>
        <errorMessage>End date must be greater than start date</errorMessage>
    </validationRules>
</CustomObject>